Fix resizing with keyboard shortcuts

The reason why "Alt + Shift + Left/Up" did not scale down was an error in position specification.

The following function has only one caller.
I also removed it because it contains unused code and increases pixel error when converting from floating point numbers to integers.
"boundsLeft", "boundsRight", "boundsUp", "boundsDown"

If the scaling is other than 100%, the amount of movement may inevitably increase.

BUG:431915